cabal-version:       1.24
name:                Holmusk
version:             0.0.0.0
synopsis:            See README for more info
description:         See README for more info
homepage:            https://github.com/willbasky/Holmusk
bug-reports:         https://github.com/willbasky/Holmusk/issues
license:             MIT
license-file:        LICENSE
author:              willbasky
maintainer:          vladislav.sabanov@gmail.com
copyright:           2019 willbasky
build-type:          Simple
extra-doc-files:     README.md
                   , CHANGELOG.md
tested-with:         GHC == 8.0.1

source-repository head
  type:                git
  location:            https://github.com/willbasky/Holmusk.git

library
  hs-source-dirs:      src
  exposed-modules:     Holmusk


  build-depends:       base == 4.*
                     , random
                     , monte-carlo
                     , primitive


  ghc-options:         -Wall
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                      --  -fhide-source-paths
                      --  -Wmissing-export-lists
                      --  -Wpartial-fields

  default-language:    Haskell2010

executable Holmusk
  hs-source-dirs:      app
  main-is:             Main.hs

  build-depends:       base == 4.*
                     , Holmusk


  ghc-options:         -Wall
                       -threaded
                       -rtsopts
                       -with-rtsopts=-N
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                      --  -fhide-source-paths
                      --  -Wmissing-export-lists
                      --  -Wpartial-fields

  default-language:    Haskell2010
